<resources>
    <string name="app_name">SoftPool by Softinsa IBM</string>
    <string name="lembrar_me">Lembrar-me</string>
    <string name="e_mail">E-mail</string>
    <string name="btnPesquisa">PESQUISAR</string>
    <string name="btnFiltrar">APLICAR FILTRO</string>
    <string name="password_field">Password</string>
    <string name="entrar">Entrar</string>
    <string name="sair">Sair</string>
    <string name="title_activity_drawer">SoftPool by Sotinsa IBM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="pesq_boleias">Pesquisar Boleias</string>
    <string name="criar_boleias">Criar Boleias</string>
    <string name="listar_boleias">Listar Boleias</string>
    <string name="area_user">Área Utilizador</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign up or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_campo_vazio">Campo necessário</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="criarviatura">Criar Viatura</string>

    <string-array name="lotation_array">
        <item>Lotação</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string-array name="filtro_array">
        <item>Em   -> </item>
        <item>Até  -> </item>
        <item>Após -> </item>
    </string-array>


    <string name="title_activity_splash">splashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="combustivel">COMBUSTIVEL</string>
    <string name="title_activity_maps">Map</string>
    <string name="sim">SIM</string>
    <string name="nao">NÃO</string>
</resources>