<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_area_user"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/area_user" />
        <item
            android:id="@+id/nav_criar_boleias"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/criar_boleias" />
        <item
            android:id="@+id/nav_pesquisa_boleias"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/pesq_boleias" />
        <item
            android:id="@+id/nav_listar_boleias"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/listar_boleias" />
    </group>

    <item android:title="  ">
        <menu>
            <item
                android:id="@+id/nav_alterapass"
                android:icon="@drawable/ic_menu_share"
                android:title="Alterar Password" />
            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/sair" />
        </menu>
    </item>

</menu>
